--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter&family=Josefin+Sans:wght@400;700&display=swap" rel="stylesheet">
-    <link rel="icon" href="assets/favicon.ico">
+    <link rel="icon" href="assets/icon.png">
     <title>We are the Champions</title>
 </head>
 <body>
@@ -16,6 +16,9 @@
     <textarea placeholder="Write your endorsement here"></textarea>
     <button>Publish</button>
     <h3>- Endorsements - </h3>
-    <script src="index.js"></script>
+    <div id="endorsements">
+
+    </div>
+    <script src="index.js" type="module"></script>
 </body>
 </html>
